# IotWebsocket

./: .gitignore  IotWebsocket-win.code-workspace  IotWebsocket.code-workspace  IotWebsocket.json  README.md  iot-meta.json  meta.json
config/: IotWebSocket.json  IotWebSocketMeta.json  IotWebSocketMeta.jsonnet  IotWebsocket.jsonnet  Opc.Gateway.jsonnet  OpcGateway.jsonnet  meta.json  opcGateway-meta.jsonnet
config/sql/mysql/: opc_server_insert.sql
config/sql/sqlServer/: opc_server_insert.sql
config/win/debug/: args.libsonnet
scripts/: JdeDBSetup.ps1  JdeIotWeb.bat  JdeSetup.ps1  JdeUninstall.ps1  build-iotwebsocket.sh
setup/: iot.nsi
source/: ApplicationServer.cpp  ApplicationServer.h  CMakeLists.txt  CMakePresets.json  HttpRequestAwait.cpp  HttpRequestAwait.h  IotWebsocket.rc  IotWebsocket.sln  IotWebsocket.vcxproj  IotWebsocket.vcxproj.filters  Main.cpp  Rest.cpp  Rest.cpp_  Rest.h  Rest.h_  Server.cpp  Server.h  ServerSocketSession.cpp  ServerSocketSession.h  Socket.cpp  Socket.h  Socket.x.h  WebServer.cpp  WebServer.h  WebSession.cpp  WebSession.h  build.sh  main.cpp  pc.h  typedefs.h
source/async/: AsyncRequest.cpp  AsyncRequest.h  Attributes.cpp  Attributes.h  ConnectAwait.cpp  ConnectAwait.h  CreateSubscriptions.cpp  CreateSubscriptions.h  DataChanges.cpp  DataChanges.h  SessionAwait.cpp  SessionAwait.h  SetMonitoringMode.cpp  SetMonitoringMode.h  Write.cpp  Write.h
source/types/: FromServer.h  MonitoringNodes.cpp  MonitoringNodes.h  OpcServer.cpp  OpcServer.h
source/types/proto/: FromClient.proto  FromServer.proto  Iot.FromServer.cpp  Iot.FromServer.h  IotFromClient.proto  IotFromServer.proto  Opc.FromServer.cpp  Opc.FromServer.h
source/uatypes/: Browse.cpp  Browse.h  CreateMonitoredItemsRequest.h  Logger.cpp  Logger.h  MonitoredItemCreateResult.h  Node.cpp  Node.h  UAClient.cpp  UAClient.h  UAException.h  UAVariant.h  Value.cpp  Value.h  helpers.h
sql/: iot_opc_server_insert.ms.sql  iot_opc_server_insert.sql
